--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.4.2",
     "body-parser": "^1.14.1",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
+    "express-sessions": "^1.0.5",
     "knuth-shuffle": "^1.0.1",
     "mongoose": "^4.1.9",
+    "passport": "^0.3.0",
+    "passport-facebook": "^2.0.0",
+    "passport-google-oauth": "^0.2.0",
     "underscore": "^1.8.3"
   }
 }
