--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "connect-flash": "^0.1.1",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
@@ -20,6 +22,7 @@
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
+    "passport-local": "^1.0.0",
     "underscore": "^1.8.3"
   }
 }
