--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.1.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
     "express-sessions": "^1.0.5",
+    "gravatar": "^1.4.0",
     "knuth-shuffle": "^1.0.1",
     "mongoose": "^4.1.9",
     "passport": "^0.3.0",
