--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cp -r node_modules/chart.js public/lib"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "async": "^1.4.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "chart.js": "^1.0.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
     "cors": "^2.7.1",
