Add Image Questions

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.4.2",
+    "aws-sdk": "^2.4.7",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "chart.js": "^1.0.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.1.0",
+    "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
@@ -23,10 +25,13 @@
     "gravatar": "^1.4.0",
     "knuth-shuffle": "^1.0.1",
     "mongoose": "^4.1.9",
+    "multer": "^1.2.0",
+    "multipart": "^0.1.5",
     "passport": "^0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.1.5",
     "underscore": "^1.8.3"
   }
 }
