--- a/public/package.json
+++ b/public/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "ng-img-crop": "^0.2.0"
   }
 }
